--- a/sparx tool website/styles.css
+++ b/sparx tool website/styles.css
@@ -1,17 +1,39 @@
-:root {
+[data-theme="light"] {
     --main: #2a73d7;
+    --gradient: linear-gradient(10deg, #1a1a1a, #0e0e0e);
+    --accent: #fff;
+    --bottom: #333;
+    --backgroud_color: #2228;
 }
+
+[data-theme="dark"] {
+    --main: #2a73d7;
+    --gradient: linear-gradient(10deg, #8d8b8b, #ededed);
+    --accent: #333;
+    --bottom: #fff;
+    --backgroud_color: rgba(194, 194, 194, 0.533);
+}
+
+a {
+    color: var(--bottom);
+    text-decoration: none;
+    cursor: pointer;
+    background: none;
+}
+
 
 * {
     margin: 0;
     padding: 0;
+    transition: background-color 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 body {
     font-family: Helvetica, Arial, sans-serif;
     min-height: 100vh;
-    background: linear-gradient(10deg, #1a1a1a, #0e0e0e); 
-    color: #fff;
+    background: var(--gradient);
+    color: var(--accent);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,10 +49,10 @@ header {
     margin-top: 10px;
     background-color: var(--main);
     border-radius: 4px;
-    color: #fff;
+    color: var(--accent);
 }
 
-header > a {
+header>a {
     margin: 0 15px;
     cursor: pointer;
     user-select: none;
@@ -50,15 +72,16 @@ main {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border-bottom: 2px solid #333;
+    border-bottom: 2px solid var(--bottom);
 }
 
 h1 {
     display: flex;
     font-size: 90px;
+
 }
 
-h1 > #blue {
+h1>#blue {
     color: var(--main);
 }
 
@@ -82,10 +105,11 @@ h1 > #blue {
     background-color: var(--main);
     border: none;
     border-radius: 4px;
-    color: #fff;
+    color: var(--accent);
 }
 
-#features, #about {
+#features,
+#about {
     width: 1000px;
     max-width: 85vw;
 }
@@ -97,8 +121,10 @@ li {
 }
 
 #about {
-    background-color: #2228;
-    border: 2px solid #333;
+    background-color: var(--backgroud_color);
+    border: 2px solid var(--bottom);
     border-radius: 6px;
     padding: 20px;
 }
+
+/* The slider */
